pcl/src/sqlite3_pinvoke.cs


            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public delegate int callback_collation(IntPtr puser, int len1, IntPtr pv1, int len2, IntPtr pv2);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_create_collation(IntPtr db, byte[] strName, int nType, IntPtr pvUser, callback_collation func);

            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public delegate void callback_update(IntPtr p, int typ, IntPtr db, IntPtr tbl, long rowid);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr sqlite3_update_hook(IntPtr db, callback_update func, IntPtr pvUser);

            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public delegate int callback_commit(IntPtr puser);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr sqlite3_commit_hook(IntPtr db, callback_commit func, IntPtr pvUser);

            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public delegate void callback_profile(IntPtr puser, IntPtr statement, long elapsed);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr sqlite3_profile(IntPtr db, callback_profile func, IntPtr pvUser);

            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public delegate void callback_trace(IntPtr puser, IntPtr statement);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr sqlite3_trace(IntPtr db, callback_trace func, IntPtr pvUser);

            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public delegate void callback_rollback(IntPtr puser);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr sqlite3_rollback_hook(IntPtr db, callback_rollback func, IntPtr pvUser);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr sqlite3_db_handle(IntPtr stmt);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr sqlite3_next_stmt(IntPtr db, IntPtr stmt);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_stmt_busy(IntPtr stmt);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_stmt_readonly(IntPtr stmt);

            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public delegate int callback_exec(IntPtr db, int n, IntPtr values, IntPtr names);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_exec(IntPtr db, byte[] strSql, callback_exec cb, IntPtr pvParam, out IntPtr errMsg);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_get_autocommit(IntPtr db);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_extended_result_codes(IntPtr db, int onoff);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_errcode(IntPtr db);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_extended_errcode(IntPtr db);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr sqlite3_errstr(int rc); /* 3.7.15+ */

            // Since sqlite3_log() takes a variable argument list, we have to overload declarations
            // for all possible calls.  For now, we are only exposing a single string, and 
            // depend on the caller to format the string.
            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern void sqlite3_log(int iErrCode, byte[] zFormat);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_file_control(IntPtr db, byte[] zDbName, int op, IntPtr pArg);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr sqlite3_backup_init(IntPtr destDb, byte[] zDestName, IntPtr sourceDb, byte[] zSourceName);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_backup_step(IntPtr backup, int nPage);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_backup_finish(IntPtr backup);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_backup_remaining(IntPtr backup);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_backup_pagecount(IntPtr backup);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_blob_open(IntPtr db, byte[] sdb, byte[] table, byte[] col, long rowid, int flags, out IntPtr blob);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_blob_write(IntPtr blob, byte[] b, int n, int offset);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_blob_read(IntPtr blob, byte[] b, int n, int offset);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_blob_bytes(IntPtr blob);

            [DllImport(SQLITE_DLL, CallingConvention = CallingConvention.Cdecl)]
            public static extern int sqlite3_blob_close(IntPtr blob);

#if NETFX_CORE
            [DllImport(SQLITE_DLL, EntryPoint = "sqlite3_win32_set_directory", CallingConvention=CallingConvention.Cdecl, CharSet=CharSet.Unicode)]
            public static extern int sqlite3_win32_set_directory (uint directoryType, string directoryPath);
#endif

        }
    }
}
